# Flood-Exposure-Assessment-in-the-Nile-Basin

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/processed/: .gitkeep
data/raw/vector/: .gitkeep
notebooks/: Visulization.ipynb  exploratory_analysis.ipynb
report/figures/: .gitkeep
scripts/: README.md  setup_environment.py
src/: __init__.py  dem_processing.py  hydrology.py
src/analysis/: __init__.py  exposure_metrics.py  time_series.py  zonal_statistics.py
src/config/: settings.py
src/cubes/: __init__.py  xarray_cube.py
src/io/: __init__.py  download_data.py  load_raster.py  load_vector.py
src/preprocessing/: __init__.py  masking.py  raster_preprocessing.py  vector_preprocessing.py
src/tensors/: __init__.py  numpy_vs_tensor.py  pytorch_ops.py  tensorflow_ops.py
src/utils/: __init__.py  spatial_utils.py
src/visualization/: __init__.py  maps.py  plots.py
tests/: __init__.py  test_cubes.py  test_dem_processing.py  test_exposure.py  test_hydrology.py  test_io.py  test_tensors.py  test_zonal_stats.py
